@@ -3,6 +3,8 @@ Changelog
 
 4.9-dev - (unreleased)
 ----------------------
+* Bugfix: patch for losing css/js registry on submit after ac cookie expired
+[simiamih refs #17259]
 * Change: more clean up after kss removal
 [simiamih refs #17259]
 
